<resources>
    <string name="app_name">Digital Library Admin</string>
    <string name="enter_book_name">Enter Book Name</string>
    <string name="enter_author_name">Enter Author Name</string>
    <string name="enter_publication">Enter Publication</string>
    <string name="enter_price">Enter Price</string>
    <string name="enter_unique_id">Enter Unique ID</string>
    <string name="enter_number_of_pages">Enter Number of Pages</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="submit">Submit</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_in">Sign In</string>
    <string name="auth_failed">Authentication Failed</string>
    <string name="reset_password">Reset Password</string>
    <string name="issue_book">Issue Book</string>
    <string name="add_book">Add Book</string>
    <string name="return_book">Return Book</string>
    <string name="issue">Issue</string>
    <string name="return1">Return</string>
    <string name="enter_book_id">Enter Book ID</string>
    <string name="enter_book_unique_id">Enter Book Unique ID</string>
    <string name="librarian_info">Librarian Info</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_id">Enter ID</string>
    <string name="enter">Enter</string>
    <string name="title_activity_main2">Library Admin</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="coming_soon">Coming Soon!!!</string>
</resources>
