<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tapan.digitallibraryadmin.fragments.ReturnBookFragment">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_book_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edt_book_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_book_name"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_book_uid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edt_book_uid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_book_unique_id"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_user_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edt_user_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter User ID"
                android:inputType="number"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_return"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/return1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="11"
            android:layout_marginTop="20dp">
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/divider"
                android:layout_weight="3"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="OR"
                android:layout_weight="5"
                android:textAlignment="center"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/divider"
                android:layout_weight="3"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_book_qr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Scan Book QR Code"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btn_user_qr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Scan Book User Code" />

    </LinearLayout>

</FrameLayout>
